--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+body{
+    background-color: #B397D6;
+}
+.shadow{
+    box-shadow: -15px 13px 268px 92px rgba(105,67,133,0.75);
+-webkit-box-shadow: -15px 13px 268px 92px rgba(105,67,133,0.75);
+-moz-box-shadow: -15px 13px 268px 92px rgba(105,67,133,0.75);
 }
